test/typecheck/errors/bad-identifier5.boa
f := function(int: _0) : bool { return true; };
